# knowledge-base

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  pyproject.toml
.claude/skills/release-checklist/: SKILL.md
.github/workflows/: add-to-project.yml  ci.yml
docs/: conf.py  index.md  requirements.md
docs/adr/: phase2-benchmark-memarch-bench-first.md  phase2-longtracer-gate.md
docs/design/: architecture-overview.md  kb-geometric-retrieval.md  kb-me-roadmap-parity.md  project-management.md
docs/design/adr/: 0017-cross-layer-faithful-metric-and-derived-structure-parity-policy.md  0018-provider-abstraction.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md
docs/insights/: four-layer-cognitive-architecture.md
docs/plans/: 2026-03-07-map-reduce-extraction-design.md  2026-03-07-vision-figure-extraction-design.md  2026-03-19-folder-semantic-embeddings.md  2026-06-01-github-project-management.md  2026-06-16-450-schema-version-migrate.md  2026-06-26-provider-abstraction-adr-0018-advisor.md  2026-06-26-provider-abstraction-adr-0018-subagent-review.md  2026-06-26-provider-abstraction-adr-0018.md  349-indexer-cli.md  450-schema-version-migrate-agy-review.md  450-schema-version-migrate-gemini-review.md  450-schema-version-migrate-subagent-review.md  HANDOFF-user-actions.md  github-project-management-advisor.md  github-project-management-gemini-review.md  github-project-management-subagent-review.md  plan-94.md  pymupdf4llm-eval.md
docs/plans/450-schema-version-migrate-drafts/: draft-architecture-first.md  draft-mvp-first.md  draft-risk-first.md
docs/reference/: glossary.md  mcp-tools.md  schema.md
docs/superpowers/plans/: 2026-03-12-comprehensive-documentation.md  2026-03-19-chunk-sessions-join-table.md
docs/superpowers/specs/: 2026-03-19-auto-relationship-discovery-design.md
docs/usage/: auto-relationships.md  bibtex-export.md  embedding-spaces.md  figure-extraction.md  ingesting-documents.md  prediction-errors.md  relationships-conclusions.md  searching.md  structured-extraction.md
qa/: super-qa-findings-2026-03-22.md
qa/super-qa/: README.md  dupe_map.json
qa/super-qa/runs/2026-06-03/: consolidated.json  findings.md  issue_manifest.json  issue_state.json  stats.md  summary.json
qa/super-qa/scripts/: build_consolidated.py  diff.py  file_issues.sh  gen_manifest.py  stats.py
scripts/: README.md  benchmark_warm_pymupdf4llm.py  eval_pymupdf4llm.py  gen-mapping.sh  migrate-issues.sh  setup-projects.sh  sync-board-fields.sh  sync-labels.sh
scripts/lib/: pm-common.sh
src/knowledge_base/: __init__.py  _conn.py  _omniparser_server.py  auto_relate.py  bibtex.py  chunking.py  comparison.py  conclusions.py  db.py  embed_swap.py  embeddings.py  exceptions.py  extraction.py  folder_summaries.py  indexer.py  ingest.py  jobs.py  keywords.py  llm.py  migrate.py  papers.py  prediction_errors.py  reranker.py  search.py  server.py  utils.py  vision.py  web.py
src/knowledge_base/browser/: render_page.py
src/knowledge_base/routes/: __init__.py  embeddings.py  extraction.py  ingestion.py  operations.py  papers.py  search.py
src/research_index/: __init__.py  conclusions.py  db.py  embed_swap.py  embeddings.py  extraction.py  ingest.py  jobs.py  papers.py  search.py  server.py  vision.py
src/research_index/browser/: render_page.py
tests/: conftest.py  repro_188.py  test_auto_relate.py  test_bibtex.py  test_chunking.py  test_comparison.py  test_conclusions.py  test_db.py  test_db_path_config.py  test_embed_spaces.py  test_embed_swap.py  test_embeddings.py  test_extraction.py  test_folder_summaries.py  test_indexer.py  test_ingest.py  test_jobs.py  test_keywords.py  test_llm.py  test_markdown_chunking.py  test_multi_figure.py  test_omniparser_server.py  test_papers.py  test_prediction_errors.py  test_pymupdf4llm_eval.py  test_pymupdf4llm_integration.py  test_reranker.py  test_routes_embeddings.py  test_routes_extraction.py  test_routes_ingestion.py  test_routes_operations.py  test_routes_papers.py  test_routes_search.py  test_schema_migrate.py  test_search.py  test_section_chunking.py  test_server.py  test_server_chunking.py  test_thread_safety.py  test_utils.py  (+3 more)
utils/scripts/: README.md  benchmark_warm_pymupdf4llm.py  eval_pymupdf4llm.py  gen-mapping.sh  migrate-issues.sh  setup-projects.sh  sync-board-fields.sh  sync-labels.sh
