[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-index"
version = "0.1.0"
description = "Hybrid semantic search MCP server for research and code"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "pillow>=10.0",
    "pymupdf>=1.27.1",
    "pymupdf4llm>=1.27.2,<2",
    "sqlite-vec>=0.1.6",
    "trafilatura>=2.0.0",
]

[project.scripts]
research-index = "research_index.server:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (run with -m slow)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.5",
]
