[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-base"
version = "0.1.0"
description = "Hybrid semantic search MCP server for research papers, code, and notes"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "numpy>=1.26",
    "pillow>=10.0",
    "pymupdf>=1.27.1",
    # 1.27.2.2+ drop ![](…) image refs from to_markdown(write_images), breaking
    # vision figure extraction (#465); strategic unpin tracked in #466.
    "pymupdf4llm>=1.27.2,<1.27.2.2",
    "sqlite-vec>=0.1.6",
    "trafilatura>=2.0.0",
]

[project.scripts]
knowledge-base = "knowledge_base.server:main"
knowledge-base-ingest = "knowledge_base.indexer:main"
omniparser-server = "knowledge_base._omniparser_server:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (run with -m slow)",
]

[tool.uv]
# Security floors for transitive deps flagged by super-qa #439 (infra/supply-chain-cves).
# Bumped to the current latest-secure releases; keeps future resolves from regressing
# below the known-CVE patch thresholds. (`pip` is N/A — this is a uv-managed project.)
constraint-dependencies = [
    "idna>=3.18",
    "pygments>=2.20.0",
    "urllib3>=2.7.0",
    "requests>=2.34.2",
    "certifi>=2026.6.17",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# super-qa #439 (infra/build-no-tool-config): a real select replacing ruff defaults.
# E/F/W pycodestyle+pyflakes, B bugbear, SIM simplify, UP pyupgrade, C4 comprehensions,
# PTH pathlib, RUF ruff-specific, S bandit security.
select = ["E", "F", "W", "B", "SIM", "UP", "C4", "PTH", "RUF", "S"]
ignore = [
    # The codebase intentionally uses Unicode prose (em dashes, arrows) in comments,
    # docstrings, and strings; ambiguous-character lints are noise here.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert, dummy credentials, temp paths, try/except/pass
# scaffolding, non-crypto randomness, bind-all hosts, and `assert False`.
"tests/**" = ["S101", "S105", "S106", "S108", "S110", "S311", "S104", "B011"]

[tool.pyright]
# super-qa #439 (infra/build-no-tool-config): static type-check gate (basedpyright).
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.5",
    "basedpyright>=1.21",
]
docs = [
    "sphinx>=8.0",
    "myst-parser>=4.0",
    "sphinxcontrib-mermaid>=1.0",
    "sphinx-rtd-theme>=3.0",
]
openai = ["openai>=1.0"]
onnx = ["onnxruntime>=1.16"]
reranker = [
    "onnxruntime>=1.16",
    "tokenizers>=0.15",
]
# Browser-rendering backend for src/knowledge_base/browser/render_page.py. Previously
# an undeclared runtime import; declared here so the type-checker resolves it and the
# optional feature is installable via `uv sync --group browser`.
browser = ["playwright>=1.40"]
